tests/baselines/reference/-57087-13.errors.txt
-57087-13.ts(2,5): error TS1360: Type '() => string | number' does not satisfy the expected type '(() => string) & (() => number)'.
  Type '() => string | number' is not assignable to type '() => string'.
    Type 'string | number' is not assignable to type 'string'.
      Type 'number' is not assignable to type 'string'.


==== -57087-13.ts (1 errors) ====
    declare const f42: () => string | number;
    f42 satisfies (() => string) & (() => number);
        ~~~~~~~~~
!!! error TS1360: Type '() => string | number' does not satisfy the expected type '(() => string) & (() => number)'.
!!! error TS1360:   Type '() => string | number' is not assignable to type '() => string'.
!!! error TS1360:     Type 'string | number' is not assignable to type 'string'.
!!! error TS1360:       Type 'number' is not assignable to type 'string'.
    